# bevy-jam-4

./: .gitignore  Cargo.toml  LICENSE  credits.txt  gamecover.kra  wasm_build_command.txt
assets/: enemy.aseprite  healthbar.aseprite  layers_bg.aseprite  palette_bg.aseprite
src/: game.rs  init.rs  main.rs  progressbar.rs
src-web/: index.html
