[package]
name = "bevy-jam-4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy-inspector-egui = { version = "0.21" }
bevy_xpbd_2d = { git = "https://github.com/Jondolf/bevy_xpbd", branch = "main", commit = "0a66d81f69f5bb2bfebd768721055b9eb8d4405e", default-features = false, features = ["2d", "f32", "debug-plugin"] }
